--- a/index.css
+++ b/index.css
@@ -129043,7 +129043,7 @@ body.rtl .elementor-33 .elementor-element.elementor-element-3b7f16b .jet-nav--ho
     margin: -30px 0px 0px 0px;
   }
 
-  <<<<<<< HEAD .wp-block-audio figcaption {
+  .wp-block-audio figcaption {
     margin-top: .5em;
     margin-bottom: 1em
   }
